<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.detail.DetailFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_weight="1"
        android:layout_width="match_parent"
        map:cardCornerRadius="10dp"
        android:layout_height="0dp">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

    </com.google.android.material.card.MaterialCardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherLayout"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="0dp"
        android:layout_weight="2">



        <TextView
            android:id="@+id/tempTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintHorizontal_chainStyle="packed"
            map:layout_constraintEnd_toStartOf="@id/staticTempTV"/>

        <TextView
            android:id="@+id/staticTempTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/celsius"
            android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintStart_toEndOf="@id/tempTV"
            map:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            map:layout_constraintTop_toBottomOf="@id/tempTV"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:id="@+id/minTempLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            map:layout_constraintTop_toBottomOf="@id/descriptionTV"
            map:layout_constraintBottom_toTopOf="@id/humidityLayout"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintEnd_toStartOf="@id/maxTempLayout"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/staticMinTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/arrow_down"
                map:layout_constraintHorizontal_chainStyle="packed"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintTop_toBottomOf="@id/descriptionTV"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintEnd_toStartOf="@id/minTempTV"/>
            <TextView
                android:id="@+id/minTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintTop_toBottomOf="@id/descriptionTV"
                map:layout_constraintEnd_toStartOf="@id/staticMinTempCelsiusTV"
                map:layout_constraintStart_toEndOf="@id/staticMinTempTV"/>
            <TextView
                android:id="@+id/staticMinTempCelsiusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/celsius"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintTop_toBottomOf="@id/descriptionTV"
                map:layout_constraintStart_toEndOf="@id/minTempTV"
                map:layout_constraintEnd_toStartOf="@id/staticMaxTempTV"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maxTempLayout"
            map:layout_constraintTop_toBottomOf="@id/descriptionTV"
            map:layout_constraintBottom_toTopOf="@id/humidityLayout"
            map:layout_constraintStart_toEndOf="@id/minTempLayout"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintHorizontal_chainStyle="spread">
            <TextView
                android:id="@+id/staticMaxTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/arrow_up"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintTop_toBottomOf="@id/descriptionTV"
                map:layout_constraintStart_toEndOf="@id/staticMinTempCelsiusTV"
                map:layout_constraintEnd_toStartOf="@id/maxTempTV"/>
            <TextView
                android:id="@+id/maxTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintTop_toBottomOf="@id/descriptionTV"
                map:layout_constraintStart_toEndOf="@id/staticMaxTempTV"
                map:layout_constraintEnd_toStartOf="@id/staticMaxTempCelsiusTV"/>
            <TextView
                android:id="@+id/staticMaxTempCelsiusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/celsius"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintStart_toEndOf="@id/maxTempTV"
                map:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humidityLayout"
            map:layout_constraintTop_toBottomOf="@id/minTempLayout"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintEnd_toStartOf="@id/windSpeedLayout">
            <TextView
                android:id="@+id/staticHumidityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/humidity"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                map:layout_constraintTop_toTopOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/humidityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                map:layout_constraintHorizontal_chainStyle="packed"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintTop_toBottomOf="@id/staticHumidityTV"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintEnd_toStartOf="@id/staticHumidityPercentTV"/>
            <TextView
                android:id="@+id/staticHumidityPercentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/percent"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintBaseline_toBaselineOf="@id/humidityTV"
                map:layout_constraintStart_toEndOf="@id/humidityTV"
                map:layout_constraintEnd_toEndOf="@id/staticHumidityTV"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/windSpeedLayout"
            map:layout_constraintTop_toBottomOf="@id/minTempLayout"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintStart_toEndOf="@id/humidityLayout"
            map:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/staticWindSpeedTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/wind_speed"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                map:layout_constraintTop_toTopOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/windSpeedTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                map:layout_constraintHorizontal_chainStyle="packed"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                map:layout_constraintTop_toBottomOf="@id/staticWindSpeedTV"
                map:layout_constraintStart_toStartOf="@id/staticWindSpeedTV"
                map:layout_constraintEnd_toStartOf="@id/staticWindSpeedMCTV"/>

            <TextView
                android:id="@+id/staticWindSpeedMCTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/meters_per_second"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                map:layout_constraintBaseline_toBaselineOf="@id/windSpeedTV"
                map:layout_constraintStart_toEndOf="@id/windSpeedTV"
                map:layout_constraintEnd_toEndOf="@id/staticWindSpeedTV"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/progressBar"/>

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/weatherGroup"
            map:constraint_referenced_ids="descriptionTV, maxTempLayout, minTempLayout, humidityLayout, windSpeedLayout, tempTV, staticTempTV"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>